fixing footer sizing issues on smaller screens

--- a/app/assets/stylesheets/less/layouts.less
+++ b/app/assets/stylesheets/less/layouts.less
@@ -42,6 +42,6 @@ body {
 
 
 #footer {
-	max-width:100%;
+	min-width:@width;
 	padding:20px 75px;	
 }
